prevent horizontal misalignment inside modal on odd page width, fixes #414

--- a/src/less/bootstrap2/bootstrap-switch.less
+++ b/src/less/bootstrap2/bootstrap-switch.less
@@ -11,6 +11,7 @@
   text-align: left;
   overflow: hidden;
   line-height: 8px;
+  z-index: 0;
   .user-select(none);
   vertical-align: middle;
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
